feat: apply further style to about section

--- a/src/components/about-section/about-section.html
+++ b/src/components/about-section/about-section.html
@@ -3,13 +3,16 @@
   <article>
     <!-- Section about me -->
     <h2>Vorstellung</h2>
-    <p>Ich bin Chuck Norris, ein Kampfsportler und Schauspieler. Vor allem aber, wurde ich für meine Rollen in Actionfilmen bekannt.</p>
-    <p>Die "Chuck Norris Facts" wurden populär, weil sie meine Actionhelden-Persönlichkeit humorvoll übertrieben und im Internet viral verbreitet wurden.</p>
+    <p>
+      Ich bin Chuck Norris, ein Schauspieler und Kampfsportler. Vor allem aber, wurde ich für meine Rollen in Actionfilmen bekannt. Die "Chuck Norris Facts" wurden populär, weil
+      sie meine Actionhelden-Persönlichkeit humorvoll übertreiben und durch das Internet viral gingen.
+    </p>
   </article>
 
   <!-- Section martial arts -->
   <article>
     <h2>Kampfkünste</h2>
-    <p>Ich habe mehrere Kampfstile trainiert, darunter Karate, Taekwondo und Brazilian Jiu-Jitsu.</p>
+    <p>...</p>
+    <p>...</p>
   </article>
 </div>
