--- a/src/components/about-section/about-section.scss
+++ b/src/components/about-section/about-section.scss
@@ -15,16 +15,13 @@
     box-shadow: 0 var(--shadow-size-medium) var(--box-shadow-medium);
     background: var(--mat-sys-surface-container-lowest);
 
-    h1 {
-      padding-bottom: var(--var-spacing-2);
-    }
-
     article {
       display: flex;
       flex-direction: column;
       gap: var(--var-spacing-3);
 
       h2 {
+        padding-top: var(--var-spacing-2);
         color: var(--mat-sys-primary);
       }
 
