--- a/src/components/animated-intro-section/animated-intro-section.scss
+++ b/src/components/animated-intro-section/animated-intro-section.scss
@@ -32,11 +32,12 @@
         .section-top {
           padding-bottom: var(--var-spacing-7);
           width: 90%;
+          min-width: 360px;
           > h1 {
             font-size: var(--var-size-12);
           }
           > h1 + h1 {
-            margin-top: var(--var-spacing-7);
+            margin-top: var(--var-spacing-8);
           }
           > h1 + p {
             margin-top: var(--var-spacing-10);
