--- a/src/components/generation-card/generation-card.scss
+++ b/src/components/generation-card/generation-card.scss
@@ -4,12 +4,11 @@
     box-shadow: 0 var(--shadow-size-light) var(--box-shadow-medium);
     border: none;
     background: var(--mat-sys-surface-container-lowest);
-    padding: var(--var-spacing-6);
+    padding: var(--var-spacing-9) var(--var-spacing-5);
     overflow-x: auto;
 
     mat-card-title h1 {
-      color: var(--mat-sys-on-secondary-container);
-      margin-bottom: var(--var-spacing-10);
+      margin-bottom: var(--var-spacing-7);
     }
   }
 }
