style: add code comments

--- a/src/components/chuck-jokes-card/chuck-jokes-card.html
+++ b/src/components/chuck-jokes-card/chuck-jokes-card.html
@@ -1,16 +1,18 @@
-<!-- Section chuck's jokes -->
 <app-generation-card cardTitle="Chuck's Witze 💬">
   <ng-container generation-card-content>
+    <!-- Card content -->
     <div class="container-content">
       <p>{{jokeDisplayed}}</p>
     </div>
   </ng-container>
+  <!-- Card buttons -->
   <ng-container generation-card-action>
     <div class="container-action">
       <button (click)="fetchNewJoke();" matButton>
         <p>NEU</p>
         <mat-icon>autorenew</mat-icon>
       </button>
+
       <button (click)="favouriseChucksJoke()" matButton>
         <p>FAVORISIEREN</p>
         <mat-icon>star</mat-icon>
