--- a/src/components/about-section/about-section.scss
+++ b/src/components/about-section/about-section.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding: 0 var(--var-spacing-8) calc(100% / 5) var(--var-spacing-8);
+  padding: 0 calc(2 * var(--var-spacing-12)) calc(100% / 5) calc(2 * var(--var-spacing-12));
 
   .content-wrapper {
     display: flex;
